--- a/Programmieren 3 Gruppe 4/src/I18NPropertiesFiles/Bundel.properties
+++ b/Programmieren 3 Gruppe 4/src/I18NPropertiesFiles/Bundel.properties
@@ -53,6 +53,6 @@ usser = Ussername
 order = Bestellen
 out = Abmelden
 file =  Datei
-open = Öffen
+open = Öffnen
 opfile= Öffent eine Datei
 saveas= Speichern als
