Save on Exit in all lenguages

--- a/Programmieren 3 Gruppe 4/src/I18NPropertiesFiles/Bundel.properties
+++ b/Programmieren 3 Gruppe 4/src/I18NPropertiesFiles/Bundel.properties
@@ -56,3 +56,4 @@ file =  Datei
 open = Öffnen
 opfile= Öffent eine Datei
 saveas= Speichern als
+wantToSave=Möchten Sie Ihren Fortschritt speichern?
