--- a/Programmieren 3 Gruppe 4/src/I18NPropertiesFiles/Bundel.properties
+++ b/Programmieren 3 Gruppe 4/src/I18NPropertiesFiles/Bundel.properties
@@ -56,4 +56,8 @@ file =  Datei
 open = Öffnen
 opfile= Öffent eine Datei
 saveas= Speichern als
+cdstue = CD Stückzahl
+plstue = Platte Stückzahl
+mp3stue = Mp3 Stückzahl
 wantToSave=Möchten Sie Ihren Fortschritt speichern?
+mbid = MBID
