add change Langue to login

--- a/Programmieren 3 Gruppe 4/src/I18NPropertiesFiles/Bundel.properties
+++ b/Programmieren 3 Gruppe 4/src/I18NPropertiesFiles/Bundel.properties
@@ -61,3 +61,5 @@ plstue = Platte Stückzahl
 mp3stue = Mp3 Stückzahl
 wantToSave=Möchten Sie Ihren Fortschritt speichern?
 mbid = MBID
+log = Login
+nhin = Neu Hinzufügen
