--- a/Programmieren 3 Gruppe 4/src/I18NPropertiesFiles/Bundel.properties
+++ b/Programmieren 3 Gruppe 4/src/I18NPropertiesFiles/Bundel.properties
@@ -53,8 +53,8 @@ usser = Ussername
 order = Bestellen
 out = Abmelden
 file =  Datei
-open = Öffnen
-opfile= Öffent eine Datei
+open = öffnen
+opfile= öffent eine Datei
 saveas= Speichern als
 cdstue = CD Stückzahl
 plstue = Platte Stückzahl
@@ -63,3 +63,5 @@ wantToSave=Möchten Sie Ihren Fortschritt speichern?
 mbid = MBID
 log = Login
 nhin = Neu Hinzufügen
+CdCount = CD Anzahl
+VinylCount = Vinyl Anzahl
