--- a/src/I18NPropertiesFiles/Bundel.properties
+++ b/src/I18NPropertiesFiles/Bundel.properties
@@ -1,8 +1,8 @@
 #Default Proties Shema key = "Tranlate Word"
-seting = Settings
-save = speichern
+seting = Einstellungen
+save = Speichern
 mid = MusikID
-k = Künstler
+k = K\u00c3\u00bcnstler
 i = Interpret
 m = Musiker
 at = AlbumTitel
@@ -24,9 +24,9 @@ p = Platte
 v = Vinyl
 t = Titel
 mp3 = Mp3
-add = Hinzufügen
-delete = Löschen
-hear = Reinhören
+add = Hinzuf\u00fcgen
+delete = L\u00f6schen
+hear = Reinh\u00f6ren
 rpcd = Regal Platz CD
 rpp = Regal Platz Platte
 lpcd = Listenpreis CD
@@ -35,33 +35,33 @@ lpmp3 = Listenpreis MP3
 epcd = Einkaufspreis CD
 epp = Einkaufspreis Platte
 epmp3 = Einkaufspreis MP3
-wkh =  Warenkorb hinzufügen
+wkh =  Warenkorb hinzuf\u00fcgen
 wk= Warenkorb
 all = Alle
 mtyp = Medientypen
 mp = Mindestpreis
-hp = Höchstpreis
+hp = H\u00f6chstpreis
 tr = Treffer
 f = Filtern
 end = Beenden
-idError = Id ist nicht Gültig
+idError = Id ist nicht G\u00fcltig
 idUsedError = Id ist schon verwendet
 mk = Musik Katalog
 pa = Passwort anzeigen
 psw = Passwort
-usser = Ussername
+usser = Benutzername
 order = Bestellen
 out = Abmelden
 file =  Datei
-open = öffnen
-opfile= öffent eine Datei
+open = \u00d6ffnen
+opfile= \u00d6ffent eine Datei
 saveas= Speichern als
-cdstue = CD Stückzahl
-plstue = Platte Stückzahl
-mp3stue = Mp3 Stückzahl
-wantToSave=Möchten Sie Ihren Fortschritt speichern?
+cdstue = CD St\u00c3\u00bcckzahl
+plstue = Platte St\u00fcckzahl
+mp3stue = Mp3 St\u00fcckzahl
+wantToSave=M\u00f6chten Sie Ihren Fortschritt speichern?
 mbid = MBID
 log = Login
-nhin = Neu Hinzufügen
+nhin = Neu Hinzuf\u00fcgen
 CdCount = CD Anzahl
 VinylCount = Vinyl Anzahl
