--- a/src/I18NPropertiesFiles/Bundel.properties
+++ b/src/I18NPropertiesFiles/Bundel.properties
@@ -2,7 +2,7 @@
 seting = Einstellungen
 save = Speichern
 mid = MusikID
-k = K\u00c3\u00bcnstler
+k = Künstler
 i = Interpret
 m = Musiker
 at = AlbumTitel
@@ -24,9 +24,9 @@ p = Platte
 v = Vinyl
 t = Titel
 mp3 = Mp3
-add = Hinzuf\u00fcgen
-delete = L\u00f6schen
-hear = Reinh\u00f6ren
+add = Hinzufügen
+delete = Löschen
+hear = Reinhören
 rpcd = Regal Platz CD
 rpp = Regal Platz Platte
 lpcd = Listenpreis CD
@@ -35,16 +35,16 @@ lpmp3 = Listenpreis MP3
 epcd = Einkaufspreis CD
 epp = Einkaufspreis Platte
 epmp3 = Einkaufspreis MP3
-wkh =  Warenkorb hinzuf\u00fcgen
+wkh =  Warenkorb hinzufügen
 wk= Warenkorb
 all = Alle
 mtyp = Medientypen
 mp = Mindestpreis
-hp = H\u00f6chstpreis
+hp = Höchstpreis
 tr = Treffer
 f = Filtern
 end = Beenden
-idError = Id ist nicht G\u00fcltig
+idError = Id ist nicht Gültig
 idUsedError = Id ist schon verwendet
 mk = Musik Katalog
 pa = Passwort anzeigen
@@ -53,15 +53,19 @@ usser = Benutzername
 order = Bestellen
 out = Abmelden
 file =  Datei
-open = \u00d6ffnen
-opfile= \u00d6ffent eine Datei
+open = öffnen
+opfile= öffent eine Datei
 saveas= Speichern als
-cdstue = CD St\u00c3\u00bcckzahl
-plstue = Platte St\u00fcckzahl
-mp3stue = Mp3 St\u00fcckzahl
-wantToSave=M\u00f6chten Sie Ihren Fortschritt speichern?
+cdstue = CD Stückzahl
+plstue = Platte Stückzahl
+mp3stue = Mp3 Stückzahl
+wantToSave=Möchten Sie Ihren Fortschritt speichern?
 mbid = MBID
 log = Login
-nhin = Neu Hinzuf\u00fcgen
+nhin = Neu Hinzufügen
 CdCount = CD Anzahl
 VinylCount = Vinyl Anzahl
+lang = Sprache
+isinmes = Musik ist schon in der Liste vorhanden.
+mithin = Mitarbeiter wurde hinzugefügt.
+mithinf = Mitarbeiter hinzufügen
