--- a/Programmieren 3 Gruppe 4/src/I18NPropertiesFiles/Bundel.properties
+++ b/Programmieren 3 Gruppe 4/src/I18NPropertiesFiles/Bundel.properties
@@ -24,7 +24,7 @@ p = Platte
 v = Vinyl
 t = Titel
 mp3 = Mp3
-add = Hinzuf\u00dcgen
+add = Hinzuf\u00fcgen
 delete = L\u00f6schen
 hear = Reinh\u00f6ren
 rpcd = Regal Platz CD
@@ -56,7 +56,7 @@ file =  Datei
 open = \u00d6ffnen
 opfile= \u00d6ffent eine Datei
 saveas= Speichern als
-cdstue = CD St\u00dcckzahl
+cdstue = CD St\u00fcckzahl
 plstue = Platte St\u00fcckzahl
 mp3stue = Mp3 St\u00fcckzahl
 wantToSave=M\u00f6chten Sie Ihren Fortschritt speichern?
@@ -64,9 +64,6 @@ mbid = MBID
 log = Login
 nhin = Neu Hinzuf\u00fcgen
 CdCount = CD Anzahl
-<<<<<<< Updated upstream:Programmieren 3 Gruppe 4/src/I18NPropertiesFiles/Bundel.properties
-VinylCount = Vinyl Anzahl
-=======
 VinylCount = Vinyl Anzahl
 lang = Sprache
 isinmes = Musik ist schon in der Liste vorhanden.
@@ -74,4 +71,4 @@ mithin = Mitarbeiter wurde hinzugef\u00fcgt.
 mithinf = Mitarbeiter hinzuf\u00fcgen
 safile =  Speichert alle \u00c4nderungen
 sasfile = Speichert alle \u00c4nderungen in einer ausgew\u00e4hlten Datei
->>>>>>> Stashed changes:src/I18NPropertiesFiles/Bundel.properties
+
