--- a/Programmieren 3 Gruppe 4/src/I18NPropertiesFiles/Bundel.properties
+++ b/Programmieren 3 Gruppe 4/src/I18NPropertiesFiles/Bundel.properties
@@ -1,6 +1,6 @@
 #Default Proties Shema key = "Tranlate Word"
 seting = Settings
-save = speichern
+save = Speichern
 mid = MusikID
 k = K\u00dcnstler
 i = Interpret
