--- a/Programmieren 3 Gruppe 4/src/I18NPropertiesFiles/Bundel.properties
+++ b/Programmieren 3 Gruppe 4/src/I18NPropertiesFiles/Bundel.properties
@@ -1,5 +1,5 @@
 #Default Proties Shema key = "Tranlate Word"
-seting = Settings
+seting = Einstellungen
 save = Speichern
 mid = MusikID
 k = K\u00dcnstler
@@ -40,7 +40,7 @@ wk= Warenkorb
 all = Alle
 mtyp = Medientypen
 mp = Mindestpreis
-hp = H\u00d6chstpreis
+hp = H\u00f6chstpreis
 tr = Treffer
 f = Filtern
 end = Beenden
@@ -49,7 +49,7 @@ idUsedError = Id ist schon verwendet
 mk = Musik Katalog
 pa = Passwort anzeigen
 psw = Passwort
-usser = Ussername
+usser = Benutzername
 order = Bestellen
 out = Abmelden
 file =  Datei
@@ -59,7 +59,7 @@ saveas= Speichern als
 cdstue = CD St\u00fcckzahl
 plstue = Platte St\u00fcckzahl
 mp3stue = Mp3 St\u00fcckzahl
-wantToSave=M\u00f6chten Sie Ihren Fortschritt speichern?
+wantToSave = M\u00f6chten Sie Ihren Fortschritt speichern?
 mbid = MBID
 log = Login
 nhin = Neu Hinzuf\u00fcgen
